// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentItems tests should load the DocumentItems component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      columns={
        Array [
          Object {
            "field": "metadata.barcode",
            "formatter": [Function],
            "title": "Barcode",
          },
          Object {
            "field": "metadata.status",
            "title": "Status",
          },
          Object {
            "field": "metadata.medium",
            "title": "Medium",
          },
          Object {
            "field": "metadata.internal_location.name",
            "formatter": [Function],
            "title": "Location",
          },
          Object {
            "field": "metadata.shelf",
            "title": "Shelf",
          },
          Object {
            "field": "metadata.circulation_restriction",
            "title": "Restrictions",
          },
          Object {
            "field": "metadata.circulation.state",
            "formatter": [Function],
            "title": "Loan Status",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      headerActionComponent={null}
      name="attached items"
      paginationComponent={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/items?q=document_pid:111"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title=""
      totalHitsCount={0}
    />
  </Error>
</Loader>
`;

exports[`DocumentItems tests should render item 1`] = `
<DocumentItems
  documentDetails={
    Object {
      "metadata": Object {
        "pid": 111,
      },
      "pid": 111,
    }
  }
  documentItems={
    Object {
      "hits": Array [
        Object {
          "ID": "1",
          "metadata": Object {
            "barcode": "123456789-1",
            "circulation_restriction": "NO_RESTRICTION",
            "document": Object {
              "title": "Document 1 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere",
              },
            },
            "internal_location_pid": "ilocid-1",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-1",
            "shelf": "Shelf 1",
            "status": "MISSING",
          },
          "pid": "item1",
        },
        Object {
          "id": "2",
          "metadata": Object {
            "barcode": "123456789-2",
            "circulation_restriction": "ONE_WEEK",
            "document": Object {
              "title": "Document 2 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere Else",
              },
            },
            "internal_location_pid": "ilocid-2",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-2",
            "shelf": "Shelf 2",
            "status": "CAN_CIRCULATE",
          },
          "pid": "item2",
        },
      ],
      "total": 2,
    }
  }
  fetchDocumentItems={[Function]}
  showMaxItems={5}
>
  <Loader>
    <Error>
      <ResultsTable
        columns={
          Array [
            Object {
              "field": "metadata.barcode",
              "formatter": [Function],
              "title": "Barcode",
            },
            Object {
              "field": "metadata.status",
              "title": "Status",
            },
            Object {
              "field": "metadata.medium",
              "title": "Medium",
            },
            Object {
              "field": "metadata.internal_location.name",
              "formatter": [Function],
              "title": "Location",
            },
            Object {
              "field": "metadata.shelf",
              "title": "Shelf",
            },
            Object {
              "field": "metadata.circulation_restriction",
              "title": "Restrictions",
            },
            Object {
              "field": "metadata.circulation.state",
              "formatter": [Function],
              "title": "Loan Status",
            },
          ]
        }
        currentPage={1}
        data={
          Array [
            Object {
              "ID": "1",
              "metadata": Object {
                "barcode": "123456789-1",
                "circulation_restriction": "NO_RESTRICTION",
                "document": Object {
                  "title": "Document 1 title",
                },
                "document_pid": "docid-1",
                "internal_location": Object {
                  "location": Object {
                    "name": "Somewhere",
                  },
                },
                "internal_location_pid": "ilocid-1",
                "medium": "NOT_SPECIFIED",
                "pid": "itemid-1",
                "shelf": "Shelf 1",
                "status": "MISSING",
              },
              "pid": "item1",
            },
            Object {
              "id": "2",
              "metadata": Object {
                "barcode": "123456789-2",
                "circulation_restriction": "ONE_WEEK",
                "document": Object {
                  "title": "Document 2 title",
                },
                "document_pid": "docid-1",
                "internal_location": Object {
                  "location": Object {
                    "name": "Somewhere Else",
                  },
                },
                "internal_location_pid": "ilocid-2",
                "medium": "NOT_SPECIFIED",
                "pid": "itemid-2",
                "shelf": "Shelf 2",
                "status": "CAN_CIRCULATE",
              },
              "pid": "item2",
            },
          ]
        }
        headerActionComponent={null}
        name="attached items"
        paginationComponent={null}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            to="/backoffice/items?q=document_pid:111"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title=""
        totalHitsCount={2}
      >
        <Table
          as="table"
          compact={true}
          name="attached items"
          selectable={true}
          striped={true}
          subtitle=""
          title=""
          unstackable={true}
        >
          <table
            className="ui selectable striped unstackable compact table"
            name="attached items"
            subtitle=""
            title=""
          >
            <ResultsTableHeader
              columns={
                Array [
                  Object {
                    "field": "metadata.barcode",
                    "formatter": [Function],
                    "title": "Barcode",
                  },
                  Object {
                    "field": "metadata.status",
                    "title": "Status",
                  },
                  Object {
                    "field": "metadata.medium",
                    "title": "Medium",
                  },
                  Object {
                    "field": "metadata.internal_location.name",
                    "formatter": [Function],
                    "title": "Location",
                  },
                  Object {
                    "field": "metadata.shelf",
                    "title": "Shelf",
                  },
                  Object {
                    "field": "metadata.circulation_restriction",
                    "title": "Restrictions",
                  },
                  Object {
                    "field": "metadata.circulation.state",
                    "formatter": [Function],
                    "title": "Loan Status",
                  },
                ]
              }
            >
              <TableHeader
                as="thead"
              >
                <thead
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="header"
                  >
                    <tr
                      className=""
                      data-test="header"
                    >
                      <TableHeaderCell
                        as="th"
                        key="Barcode"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Barcode
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Status"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Status
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Medium"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Medium
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Location"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Location
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Shelf"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Shelf
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Restrictions"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Restrictions
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Loan Status"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Loan Status
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </thead>
              </TableHeader>
            </ResultsTableHeader>
            <ResultsTableBody
              columns={
                Array [
                  Object {
                    "field": "metadata.barcode",
                    "formatter": [Function],
                    "title": "Barcode",
                  },
                  Object {
                    "field": "metadata.status",
                    "title": "Status",
                  },
                  Object {
                    "field": "metadata.medium",
                    "title": "Medium",
                  },
                  Object {
                    "field": "metadata.internal_location.name",
                    "formatter": [Function],
                    "title": "Location",
                  },
                  Object {
                    "field": "metadata.shelf",
                    "title": "Shelf",
                  },
                  Object {
                    "field": "metadata.circulation_restriction",
                    "title": "Restrictions",
                  },
                  Object {
                    "field": "metadata.circulation.state",
                    "formatter": [Function],
                    "title": "Loan Status",
                  },
                ]
              }
              rows={
                Array [
                  Object {
                    "ID": "1",
                    "metadata": Object {
                      "barcode": "123456789-1",
                      "circulation_restriction": "NO_RESTRICTION",
                      "document": Object {
                        "title": "Document 1 title",
                      },
                      "document_pid": "docid-1",
                      "internal_location": Object {
                        "location": Object {
                          "name": "Somewhere",
                        },
                      },
                      "internal_location_pid": "ilocid-1",
                      "medium": "NOT_SPECIFIED",
                      "pid": "itemid-1",
                      "shelf": "Shelf 1",
                      "status": "MISSING",
                    },
                    "pid": "item1",
                  },
                  Object {
                    "id": "2",
                    "metadata": Object {
                      "barcode": "123456789-2",
                      "circulation_restriction": "ONE_WEEK",
                      "document": Object {
                        "title": "Document 2 title",
                      },
                      "document_pid": "docid-1",
                      "internal_location": Object {
                        "location": Object {
                          "name": "Somewhere Else",
                        },
                      },
                      "internal_location_pid": "ilocid-2",
                      "medium": "NOT_SPECIFIED",
                      "pid": "itemid-2",
                      "shelf": "Shelf 2",
                      "status": "CAN_CIRCULATE",
                    },
                    "pid": "item2",
                  },
                ]
              }
            >
              <TableBody
                as="tbody"
              >
                <tbody
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="item1"
                    key="item1"
                  >
                    <tr
                      className=""
                      data-test="item1"
                    >
                      <TableCell
                        as="td"
                        data-label="Barcode"
                        data-test="0-item1"
                        key="0-item1"
                      >
                        <td
                          className=""
                          data-label="Barcode"
                          data-test="0-item1"
                        >
                          <Link
                            data-test="itemid-1"
                            to="url/itemid-1"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Status"
                        data-test="1-item1"
                        key="1-item1"
                      >
                        <td
                          className=""
                          data-label="Status"
                          data-test="1-item1"
                        >
                          MISSING
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Medium"
                        data-test="2-item1"
                        key="2-item1"
                      >
                        <td
                          className=""
                          data-label="Medium"
                          data-test="2-item1"
                        >
                          NOT_SPECIFIED
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Location"
                        data-test="3-item1"
                        key="3-item1"
                      >
                        <td
                          className=""
                          data-label="Location"
                          data-test="3-item1"
                        >
                          undefined (Somewhere)
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Shelf"
                        data-test="4-item1"
                        key="4-item1"
                      >
                        <td
                          className=""
                          data-label="Shelf"
                          data-test="4-item1"
                        >
                          Shelf 1
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Restrictions"
                        data-test="5-item1"
                        key="5-item1"
                      >
                        <td
                          className=""
                          data-label="Restrictions"
                          data-test="5-item1"
                        >
                          NO_RESTRICTION
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Loan Status"
                        data-test="6-item1"
                        key="6-item1"
                      >
                        <td
                          className=""
                          data-label="Loan Status"
                          data-test="6-item1"
                        >
                          -
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="item2"
                    key="item2"
                  >
                    <tr
                      className=""
                      data-test="item2"
                    >
                      <TableCell
                        as="td"
                        data-label="Barcode"
                        data-test="0-item2"
                        key="0-item2"
                      >
                        <td
                          className=""
                          data-label="Barcode"
                          data-test="0-item2"
                        >
                          <Link
                            data-test="itemid-2"
                            to="url/itemid-2"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Status"
                        data-test="1-item2"
                        key="1-item2"
                      >
                        <td
                          className=""
                          data-label="Status"
                          data-test="1-item2"
                        >
                          CAN_CIRCULATE
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Medium"
                        data-test="2-item2"
                        key="2-item2"
                      >
                        <td
                          className=""
                          data-label="Medium"
                          data-test="2-item2"
                        >
                          NOT_SPECIFIED
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Location"
                        data-test="3-item2"
                        key="3-item2"
                      >
                        <td
                          className=""
                          data-label="Location"
                          data-test="3-item2"
                        >
                          undefined (Somewhere Else)
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Shelf"
                        data-test="4-item2"
                        key="4-item2"
                      >
                        <td
                          className=""
                          data-label="Shelf"
                          data-test="4-item2"
                        >
                          Shelf 2
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Restrictions"
                        data-test="5-item2"
                        key="5-item2"
                      >
                        <td
                          className=""
                          data-label="Restrictions"
                          data-test="5-item2"
                        >
                          ONE_WEEK
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Loan Status"
                        data-test="6-item2"
                        key="6-item2"
                      >
                        <td
                          className=""
                          data-label="Loan Status"
                          data-test="6-item2"
                        >
                          -
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                </tbody>
              </TableBody>
            </ResultsTableBody>
            <ResultsTableFooter
              allRowsNumber={2}
              columnsNumber={7}
              currentPage={1}
              paginationComponent={null}
              seeAllComponent={
                <SeeAllButton
                  disabled={false}
                  fluid={false}
                  to="/backoffice/items?q=document_pid:111"
                />
              }
              showAllResults={false}
              showMaxRows={5}
            />
          </table>
        </Table>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;

exports[`DocumentItems tests should render show a message with no items 1`] = `
<DocumentItems
  documentDetails={
    Object {
      "metadata": Object {
        "pid": 111,
      },
      "pid": 111,
    }
  }
  documentItems={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchDocumentItems={[Function]}
  showMaxItems={5}
>
  <Loader>
    <Error>
      <ResultsTable
        columns={
          Array [
            Object {
              "field": "metadata.barcode",
              "formatter": [Function],
              "title": "Barcode",
            },
            Object {
              "field": "metadata.status",
              "title": "Status",
            },
            Object {
              "field": "metadata.medium",
              "title": "Medium",
            },
            Object {
              "field": "metadata.internal_location.name",
              "formatter": [Function],
              "title": "Location",
            },
            Object {
              "field": "metadata.shelf",
              "title": "Shelf",
            },
            Object {
              "field": "metadata.circulation_restriction",
              "title": "Restrictions",
            },
            Object {
              "field": "metadata.circulation.state",
              "formatter": [Function],
              "title": "Loan Status",
            },
          ]
        }
        currentPage={1}
        data={Array []}
        headerActionComponent={null}
        name="attached items"
        paginationComponent={null}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            to="/backoffice/items?q=document_pid:111"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title=""
        totalHitsCount={0}
      >
        <Message
          data-test="no-results"
          icon={true}
          info={true}
        >
          <div
            className="ui icon info message"
            data-test="no-results"
          >
            <MessageContent>
              <div
                className="content"
              >
                <MessageHeader>
                  <div
                    className="header"
                  >
                    No results found
                  </div>
                </MessageHeader>
                There are no 
                attached items
                .
              </div>
            </MessageContent>
          </div>
        </Message>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;

exports[`DocumentItems tests should render the see all button when showing only a few items 1`] = `
<DocumentItems
  documentDetails={
    Object {
      "metadata": Object {
        "pid": 111,
      },
      "pid": 111,
    }
  }
  documentItems={
    Object {
      "hits": Array [
        Object {
          "ID": "1",
          "metadata": Object {
            "barcode": "123456789-1",
            "circulation_restriction": "NO_RESTRICTION",
            "document": Object {
              "title": "Document 1 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere",
              },
            },
            "internal_location_pid": "ilocid-1",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-1",
            "shelf": "Shelf 1",
            "status": "MISSING",
          },
          "pid": "item1",
        },
        Object {
          "id": "2",
          "metadata": Object {
            "barcode": "123456789-2",
            "circulation_restriction": "ONE_WEEK",
            "document": Object {
              "title": "Document 2 title",
            },
            "document_pid": "docid-1",
            "internal_location": Object {
              "location": Object {
                "name": "Somewhere Else",
              },
            },
            "internal_location_pid": "ilocid-2",
            "medium": "NOT_SPECIFIED",
            "pid": "itemid-2",
            "shelf": "Shelf 2",
            "status": "CAN_CIRCULATE",
          },
          "pid": "item2",
        },
      ],
      "total": 2,
    }
  }
  fetchDocumentItems={[Function]}
  showMaxItems={1}
>
  <Loader>
    <Error>
      <ResultsTable
        columns={
          Array [
            Object {
              "field": "metadata.barcode",
              "formatter": [Function],
              "title": "Barcode",
            },
            Object {
              "field": "metadata.status",
              "title": "Status",
            },
            Object {
              "field": "metadata.medium",
              "title": "Medium",
            },
            Object {
              "field": "metadata.internal_location.name",
              "formatter": [Function],
              "title": "Location",
            },
            Object {
              "field": "metadata.shelf",
              "title": "Shelf",
            },
            Object {
              "field": "metadata.circulation_restriction",
              "title": "Restrictions",
            },
            Object {
              "field": "metadata.circulation.state",
              "formatter": [Function],
              "title": "Loan Status",
            },
          ]
        }
        currentPage={1}
        data={
          Array [
            Object {
              "ID": "1",
              "metadata": Object {
                "barcode": "123456789-1",
                "circulation_restriction": "NO_RESTRICTION",
                "document": Object {
                  "title": "Document 1 title",
                },
                "document_pid": "docid-1",
                "internal_location": Object {
                  "location": Object {
                    "name": "Somewhere",
                  },
                },
                "internal_location_pid": "ilocid-1",
                "medium": "NOT_SPECIFIED",
                "pid": "itemid-1",
                "shelf": "Shelf 1",
                "status": "MISSING",
              },
              "pid": "item1",
            },
            Object {
              "id": "2",
              "metadata": Object {
                "barcode": "123456789-2",
                "circulation_restriction": "ONE_WEEK",
                "document": Object {
                  "title": "Document 2 title",
                },
                "document_pid": "docid-1",
                "internal_location": Object {
                  "location": Object {
                    "name": "Somewhere Else",
                  },
                },
                "internal_location_pid": "ilocid-2",
                "medium": "NOT_SPECIFIED",
                "pid": "itemid-2",
                "shelf": "Shelf 2",
                "status": "CAN_CIRCULATE",
              },
              "pid": "item2",
            },
          ]
        }
        headerActionComponent={null}
        name="attached items"
        paginationComponent={null}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            to="/backoffice/items?q=document_pid:111"
          />
        }
        showAllResults={false}
        showMaxRows={1}
        singleLine={false}
        subtitle=""
        title=""
        totalHitsCount={2}
      >
        <Table
          as="table"
          compact={true}
          name="attached items"
          selectable={true}
          striped={true}
          subtitle=""
          title=""
          unstackable={true}
        >
          <table
            className="ui selectable striped unstackable compact table"
            name="attached items"
            subtitle=""
            title=""
          >
            <ResultsTableHeader
              columns={
                Array [
                  Object {
                    "field": "metadata.barcode",
                    "formatter": [Function],
                    "title": "Barcode",
                  },
                  Object {
                    "field": "metadata.status",
                    "title": "Status",
                  },
                  Object {
                    "field": "metadata.medium",
                    "title": "Medium",
                  },
                  Object {
                    "field": "metadata.internal_location.name",
                    "formatter": [Function],
                    "title": "Location",
                  },
                  Object {
                    "field": "metadata.shelf",
                    "title": "Shelf",
                  },
                  Object {
                    "field": "metadata.circulation_restriction",
                    "title": "Restrictions",
                  },
                  Object {
                    "field": "metadata.circulation.state",
                    "formatter": [Function],
                    "title": "Loan Status",
                  },
                ]
              }
            >
              <TableHeader
                as="thead"
              >
                <thead
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="header"
                  >
                    <tr
                      className=""
                      data-test="header"
                    >
                      <TableHeaderCell
                        as="th"
                        key="Barcode"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Barcode
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Status"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Status
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Medium"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Medium
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Location"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Location
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Shelf"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Shelf
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Restrictions"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Restrictions
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Loan Status"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Loan Status
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </thead>
              </TableHeader>
            </ResultsTableHeader>
            <ResultsTableBody
              columns={
                Array [
                  Object {
                    "field": "metadata.barcode",
                    "formatter": [Function],
                    "title": "Barcode",
                  },
                  Object {
                    "field": "metadata.status",
                    "title": "Status",
                  },
                  Object {
                    "field": "metadata.medium",
                    "title": "Medium",
                  },
                  Object {
                    "field": "metadata.internal_location.name",
                    "formatter": [Function],
                    "title": "Location",
                  },
                  Object {
                    "field": "metadata.shelf",
                    "title": "Shelf",
                  },
                  Object {
                    "field": "metadata.circulation_restriction",
                    "title": "Restrictions",
                  },
                  Object {
                    "field": "metadata.circulation.state",
                    "formatter": [Function],
                    "title": "Loan Status",
                  },
                ]
              }
              rows={
                Array [
                  Object {
                    "ID": "1",
                    "metadata": Object {
                      "barcode": "123456789-1",
                      "circulation_restriction": "NO_RESTRICTION",
                      "document": Object {
                        "title": "Document 1 title",
                      },
                      "document_pid": "docid-1",
                      "internal_location": Object {
                        "location": Object {
                          "name": "Somewhere",
                        },
                      },
                      "internal_location_pid": "ilocid-1",
                      "medium": "NOT_SPECIFIED",
                      "pid": "itemid-1",
                      "shelf": "Shelf 1",
                      "status": "MISSING",
                    },
                    "pid": "item1",
                  },
                ]
              }
            >
              <TableBody
                as="tbody"
              >
                <tbody
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="item1"
                    key="item1"
                  >
                    <tr
                      className=""
                      data-test="item1"
                    >
                      <TableCell
                        as="td"
                        data-label="Barcode"
                        data-test="0-item1"
                        key="0-item1"
                      >
                        <td
                          className=""
                          data-label="Barcode"
                          data-test="0-item1"
                        >
                          <Link
                            data-test="itemid-1"
                            to="url/itemid-1"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Status"
                        data-test="1-item1"
                        key="1-item1"
                      >
                        <td
                          className=""
                          data-label="Status"
                          data-test="1-item1"
                        >
                          MISSING
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Medium"
                        data-test="2-item1"
                        key="2-item1"
                      >
                        <td
                          className=""
                          data-label="Medium"
                          data-test="2-item1"
                        >
                          NOT_SPECIFIED
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Location"
                        data-test="3-item1"
                        key="3-item1"
                      >
                        <td
                          className=""
                          data-label="Location"
                          data-test="3-item1"
                        >
                          undefined (Somewhere)
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Shelf"
                        data-test="4-item1"
                        key="4-item1"
                      >
                        <td
                          className=""
                          data-label="Shelf"
                          data-test="4-item1"
                        >
                          Shelf 1
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Restrictions"
                        data-test="5-item1"
                        key="5-item1"
                      >
                        <td
                          className=""
                          data-label="Restrictions"
                          data-test="5-item1"
                        >
                          NO_RESTRICTION
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Loan Status"
                        data-test="6-item1"
                        key="6-item1"
                      >
                        <td
                          className=""
                          data-label="Loan Status"
                          data-test="6-item1"
                        >
                          -
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                </tbody>
              </TableBody>
            </ResultsTableBody>
            <ResultsTableFooter
              allRowsNumber={2}
              columnsNumber={7}
              currentPage={1}
              paginationComponent={null}
              seeAllComponent={
                <SeeAllButton
                  disabled={false}
                  fluid={false}
                  to="/backoffice/items?q=document_pid:111"
                />
              }
              showAllResults={false}
              showMaxRows={1}
            >
              <TableFooter
                as="tfoot"
                data-test="footer"
                fullWidth={true}
              >
                <TableHeader
                  as="tfoot"
                  data-test="footer"
                  fullWidth={true}
                >
                  <tfoot
                    className="full-width"
                    data-test="footer"
                  >
                    <TableRow
                      as="tr"
                      cellAs="td"
                    >
                      <tr
                        className=""
                      >
                        <TableHeaderCell
                          as="th"
                          colSpan={8}
                          textAlign="right"
                        >
                          <TableCell
                            as="th"
                            className=""
                            colSpan={8}
                            textAlign="right"
                          >
                            <th
                              className="right aligned"
                              colSpan={8}
                            >
                              <span
                                className="results-table-compact-summary"
                              >
                                Showing entries 
                                1
                                -
                                1
                                 of 
                                2
                                 
                              </span>
                              <span>
                                <SeeAllButton
                                  disabled={false}
                                  fluid={false}
                                  to="/backoffice/items?q=document_pid:111"
                                >
                                  <Button
                                    as={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "displayName": "Link",
                                        "propTypes": Object {
                                          "innerRef": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-2",
                                                  "data-test": "itemid-2",
                                                  "to": "url/itemid-2",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "onClick": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-2",
                                                  "data-test": "itemid-2",
                                                  "to": "url/itemid-2",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "replace": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-2",
                                                  "data-test": "itemid-2",
                                                  "to": "url/itemid-2",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "target": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-2",
                                                  "data-test": "itemid-2",
                                                  "to": "url/itemid-2",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "to": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-2",
                                                  "data-test": "itemid-2",
                                                  "to": "url/itemid-2",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "123456789-1",
                                                  "data-test": "itemid-1",
                                                  "to": "url/itemid-1",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/items?q=document_pid:111",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                        },
                                        "render": [MockFunction] {
                                          "calls": Array [
                                            Array [
                                              Object {
                                                "children": "123456789-1",
                                                "data-test": "itemid-1",
                                                "to": "url/itemid-1",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "children": "123456789-2",
                                                "data-test": "itemid-2",
                                                "to": "url/itemid-2",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "children": "123456789-1",
                                                "data-test": "itemid-1",
                                                "to": "url/itemid-1",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "aria-pressed": undefined,
                                                "children": Array [
                                                  "See all",
                                                  false,
                                                  false,
                                                ],
                                                "className": "ui tiny button",
                                                "disabled": undefined,
                                                "onClick": [Function],
                                                "role": "button",
                                                "tabIndex": undefined,
                                                "to": "/backoffice/items?q=document_pid:111",
                                              },
                                              [Function],
                                            ],
                                          ],
                                          "results": Array [
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                          ],
                                        },
                                      }
                                    }
                                    disabled={false}
                                    fluid={false}
                                    size="tiny"
                                    to="/backoffice/items?q=document_pid:111"
                                  >
                                    <Ref
                                      innerRef={
                                        Object {
                                          "current": null,
                                        }
                                      }
                                    >
                                      <RefForward
                                        innerRef={
                                          Object {
                                            "current": null,
                                          }
                                        }
                                      >
                                        <Link
                                          className="ui tiny button"
                                          onClick={[Function]}
                                          role="button"
                                          to="/backoffice/items?q=document_pid:111"
                                        />
                                      </RefForward>
                                    </Ref>
                                  </Button>
                                </SeeAllButton>
                              </span>
                              <span />
                            </th>
                          </TableCell>
                        </TableHeaderCell>
                      </tr>
                    </TableRow>
                  </tfoot>
                </TableHeader>
              </TableFooter>
            </ResultsTableFooter>
          </table>
        </Table>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentItems>
`;
